--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 Main Project 2 Page! 
+
+<form method="POST" action="/api/submit">
+  <label for="i-fullname">Full Name</label>
+  <input id="i-fullname" type="text" name="fullname" pattern="[A-Za-z]+" required />
+
+  <label for="i-email">Email Address</label>
+  <input id="i-email" type="email" name="email" required />
+
+  <label for="i-age">Your Age</label>
+  <input id="i-age" type="number" name="age" min="18" required />
+
+  <button type="submit">Submit</button>
+</form>
